# Copyright (C) 2017 xent
# Project is distributed under the terms of the GNU General Public License v3.0

string(TOLOWER ${PLATFORM} CMAKE_SYSTEM_SOC)

list(APPEND SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/../pin.c")
list(APPEND SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/startup.c")
list(APPEND SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_SYSTEM_SOC}/clocking.c")
list(APPEND SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_SYSTEM_SOC}/pin.c")
list(APPEND SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_SYSTEM_SOC}/startup.c")
list(APPEND SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_SYSTEM_SOC}/system.c")
list(APPEND SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_SYSTEM_SOC}/vectors.c")

if(${CONFIG_PM})
    list(APPEND SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_SYSTEM_SOC}/pm.c")
endif()

if(${CONFIG_PLATFORM_STM_UART_BASE})
    list(APPEND SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/uart_common.c")
    list(APPEND SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_SYSTEM_SOC}/uart_base.c")
endif()

if(${CONFIG_PLATFORM_STM_SERIAL})
    list(APPEND SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/serial.c")
endif()

add_library(platform OBJECT ${SOURCE_FILES})
